src/sass/components/chapters.scss
// --------------------------------------------------------------
// chapters
// --------------------------------------------------------------

.plyr__chapters {
  animation: plyr-fade-in 0.3s ease;
  bottom: -30px;
  display: none;
  font-size: $plyr-font-size-chapters-small;
  left: 0;
  text-align: center;
  transition: transform 0.4s ease-in-out;
  width: 100%;

  span:empty {
    display: none;
  }

  @media (min-width: $plyr-bp-sm) {
    font-size: $plyr-font-size-chapters-base;
    padding: calc(#{$plyr-control-spacing} * 2);
  }

  @media (min-width: $plyr-bp-md) {
    font-size: $plyr-font-size-chapters-medium;
  }
}

[data-debug='true'].plyr--chapters-active .plyr__chapters {
  display: block;
}

.plyr__chapter {
  background: $plyr-chapters-background;
  border-radius: 2px;
  box-decoration-break: clone;
  color: $plyr-chapters-text-color;
  line-height: 185%;
  padding: 0.2em 0.5em;
  white-space: pre-wrap;

  // Firefox adds a <div> when using getCueAsHTML()
  div {
    display: inline;
  }
}
.chapter_container{

  position: relative;
  bottom: auto;
 // width: 483px;
  display: flex;
  place-content: flex-start;
  z-index: 33;
 // left: 50px;
 width: 95%;
}
.chapters {
  float: left;
  min-width: 20%;
}
 
.containerBookmarks { 
  width: auto;
    font-size: 14px;
    padding: 2px 8px 0 8px;
    position: absolute;
    border-radius: 2px;

}

.captionBookmarks {
  font-family: Lato;
font-style: normal;
font-weight: normal;
font-size: 16px;
line-height: 120%;
color: #666666;
display: flex;
flex-direction: column;
align-items: flex-start;
padding: 0px;
background: #FAFAFA;
margin: 0;
}


ol#chapters li:hover {
  background: #F1FBFE;
  cursor: pointer;
  color: #215369;

  
}

li.captionBookmarks:focus {
  border-left: 7px solid #2E7FA1;
  color:#333333;
  padding-left: 1rem;
}
li.captionBookmarks:active {
  background: #D4E9F2;
  color: #163746;
}

.chapterCaption li {
  padding: 1rem;
  border-bottom: 1px solid #ccc;
  font-size: 16px;
  margin: 0px;
  background: #fff;
  padding-left: 20px;
}

.containerBookmarks:before {
  content: '';
  border-left: 1px solid #767676;
  border-right: 1px solid #767676;
  border-top: 6px solid #767676;
  position: absolute;
  text-align: center;
  display: inline-block;
  left: 38%;
  top: -2px;
  }

  .captionBookmarks.current { 
    border-left: 7px solid #2E7FA1;
    padding-left: 1rem;
    background: #F1FBFE;
    color: #215369;
  }
 
  .captionBookmarks.current:hover {
    border-left: 8px solid #215369;
}

 

